--- a/week2/task2.html
+++ b/week2/task2.html
@@ -1,7 +1,26 @@
 <html>
 <head>
 <style>
-/* Write your code here */
+h1{
+	color: green;}
+	.person{
+		color: red;
+	}
+	
+	li.retake{
+		color:red;
+	}
+	
+	div.list{
+		border-color: red;
+		border-style: solid;
+		border-width: 1px;
+		border-radius:25px;
+	}
+	div li a.retake{
+		color: red;}
+	
+  
 </style>
 </head>
 <body>
