--- a/week2/task3.html
+++ b/week2/task3.html
@@ -1,7 +1,35 @@
 <html>
 <head>
 <style>
-/* Write your code here */
+  img{
+		float: left;
+		width: 150px;
+		height: 100px;
+	}
+	.item{
+		overflow: auto;
+		margin: 20px;
+		padding: 20px;
+	}
+	div.menu a{
+		margin: 20px;
+		color: green;
+	}
+	div.item {
+		border: 2px solid red;
+		border-radius: 5px;
+	}
+	div span.price{
+		background-color: pink;
+		
+	}
+	div.urgent{
+		background-color: yellow;
+		
+	}
+	div.attributes span.city{
+		style: border;
+		}
 </style>
 </head>
 <body>
